Fixing the mess that is the social buttons on mobile

--- a/GroveWJCTStyle.css
+++ b/GroveWJCTStyle.css
@@ -519,6 +519,19 @@ figcaption.Figure-caption {
         padding-top: 1rem;
         padding-bottom: 1rem;
     }
+
+    /* Fixing the mess that is the social buttons on mobile */
+    .ArticlePage-contentInfo {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    
+    .ArticlePage-actions {
+        display:flex;
+        width: 100%;
+        justify-content: flex-end;
+    }
 }
 
 /* Mobile Portrait (360) breakpoint style */
